statefulSet.yml

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: myss

spec:
  serviceName: db-svc

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
        - name: db-cont
          image: reshu68/k8s2pro:dbimage

          ports:
            - containerPort: 3306

          # Secret
          resources:
            requests:
              cpu: "100m"
              memory: "127Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          # PVC mount
          volumeMounts:
            - name: mypvc
              mountPath: /var/lib/mysql

      # PVC volume
      volumes:
        - name: mypvc
          persistentVolumeClaim:
            claimName: mypvc
