app-svc.yml
---
apiVersion: apps/v1
kind: Service
metadata:
  name: mysvc
spec:
  type: ClusterIp
  selector:
    app: phpapp
  ports:
    - port: 80
      targetPort: 80
