db-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  ClusterIP: None
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
