ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mying
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          path: /
          pathType: prefix
          backend:
            service:
              name: mysvc
              port:
                number: 80
